--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-slick": "^0.30.3",
-    "sass": "^1.83.1"
+    "sass": "^1.83.1",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
